--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Syed Mahmudul Huda
-#logo: /assets/img/headshot_circle.png
+logo: /assets/img/headshot_circle.png
 description: Quality Control Specialist at SuperAnnotate
 show_downloads: true
 theme: jekyll-theme-minimal
